Update source code subsribe

--- a/b.html
+++ b/b.html
@@ -206,7 +206,7 @@
             </div>
         </paper-tooltip>
     </a></ytd-toggle-button-renderer>
-<!-- Subsribe -->
+<!-- Subscribe -->
 <ytd-subscribe-button-renderer class="style-scope ytd-video-secondary-info-renderer" new-subscribe-color="">
 
     <paper-button noink="" class="style-scope ytd-subscribe-button-renderer" role="button" tabindex="0" animated=""
